hphp/hack/test/typecheck/inout/bad_inout_decl_retbyref1.php
<?hh

function &foo(inout $x): void {}
